--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Claim</title>
+    <title>FreedomDao</title>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="shortcut icon" href="./r.png">
+    <link rel="shortcut icon" href="./coin.png">
 
     <style>
      body{
-        background-image:url('./Interstellar.png');
+        background-image:url('./bgimg.jpg');
 		background-repeat: no-repeat;
 		background-size: 100% 100%;
 		background-attachment: fixed;
@@ -155,7 +155,7 @@
 	
 	<div id="add_token_box"  style="margin-right: 120px;background: cyan;border-radius: 10px;padding: 5px;">
 		<h3>
-			<a href="./new.html" style="color: #000000;">WhitePaper</a>
+			<a href="./whitepaper.html" style="color: #000000;">WhitePaper</a>
 		</h3>
 	  
 	</div>
@@ -179,7 +179,7 @@
     </div>
 
 	<div id="claim_box">
-	  <button id="claim" type="button" class="btn btn-secondary">claim</button>
+	  <button id="claim" type="button" class="btn btn-secondary">Claim</button>
 	</div>
 
 
