--- a/whitepaper.html
+++ b/whitepaper.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Claim</title>
+    <title>FreedomDao</title>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="shortcut icon" href="./r.png">
+    <link rel="shortcut icon" href="./coin.png">
 
     <style>
       body{
-        background-image:url('./Interstellar1.png');
+        background-image:url('./bgimg1.jpg');
       }
       
       .text{
@@ -128,7 +128,7 @@
   <body>
 
     <div id="icon_box">
-      <img src="./r.png"
+      <img src="./coin.png"
       width="50"
       height="50">
     </div>
