--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
   <body>
 
     <div id="icon_box">
-      <img src="./r.png"
+      <img src="./coin.png"
       width="50"
       height="50">
     </div>
@@ -179,7 +179,7 @@
     </div>
 
 	<div id="claim_box">
-	  <button id="claim" type="button" class="btn btn-secondary">Claim</button>
+	  <button id="claim" type="button" class="btn btn-secondary" style="background: red;border-radius: 15px;">Claim</button>
 	</div>
 
 
