--- a/whitepaper.html
+++ b/whitepaper.html
@@ -10,6 +10,9 @@
     <style>
       body{
         background-image:url('./bgimg1.jpg');
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
+	background-attachment: fixed;
       }
       
       .text{
