--- a/whitepaper.html
+++ b/whitepaper.html
@@ -167,6 +167,8 @@
 				<a style="margin-left: 150px;">25% --> Braver, 10101 - 101010;</a><br>
 				<a style="margin-left: 150px;">50% --> Freedom, 101010 - 1010101;</a>
 			</p>
+			
+			<p style="margin-left: 150px;">101 days for Claim, the remaining tokens will not be minted if not claimed!</p>
 			</div>
 		
 		
