--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
 
       <div id="address_text_box" style="margin-bottom: 50px;">
-        <p class="text" id="eth_address_text">BNB address: 0x844880c7e74a35Ac0Dc0605b26430409231245C3</p>
+		<p class="text" id="eth_address_text">ETH address: 0x844880c7e74a35Ac0Dc0605b26430409231245C3</p>
       </div>
 
      </div>
@@ -224,7 +224,7 @@
 	  var shi = document.getElementsByClassName('JS-shi')[0];
 	  var fen = document.getElementsByClassName('JS-fen')[0];
 	  var miao = document.getElementsByClassName('JS-miao')[0];
-	  var endTime = new Date('2022/07/12 23:59:59').getTime() + 1000;
+	  var endTime = new Date('2022/06/15 23:59:59').getTime() + 1000;
 	  var interval = null;
 	  interval = setInterval(function () {
 	   var syhm = endTime - Date.now(); // 剩余毫秒
