--- a/index.html
+++ b/index.html
@@ -285,9 +285,9 @@
       add_token.addEventListener('click',async function(){
         if(is_connect == true){
           const tokenaddress = '0x1Be7eE8ee014C15FDA383035bbF7E1910645CB3c';
-          const tokensymbol = 'FDD';
+          const tokensymbol = 'ree';
           const tokendecimals = 18;
-          const tokenimage = 'http://tv.wetok.co/r.png';
+          const tokenimage = 'https://thefreedomdao.github.io/r.png';
 
           const if_add = await ethereum.request({
             method: 'wallet_watchAsset',
