--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
           const tokenaddress = '0x1Be7eE8ee014C15FDA383035bbF7E1910645CB3c';
           const tokensymbol = 'ree';
           const tokendecimals = 18;
-          const tokenimage = 'https://thefreedomdao.github.io/r.png';
+          const tokenimage = 'https://thefreedomdao.github.io/coin.png';
 
           const if_add = await ethereum.request({
             method: 'wallet_watchAsset',
