--- a/whitepaper.html
+++ b/whitepaper.html
@@ -175,32 +175,8 @@
         </p>
     </div>
 
-   
-   <div id="allcommunication_introduced_box">
-   
-     <div>
-       <p class="text" id="communication_introduced"  style="margin-bottom: 50px;color: #FFFFFF;">If you'd like to support me, send <strong id="eth">BNB</strong> here. Thank you for your support! </p>
-     </div>
-   
-   
-     <div id="address_text_box" style="margin-bottom: 50px;">
-       <p class="text" id="eth_address_text">BNB address: 0xe03542cE2EDc82fb66bEE1E1241DbeB74978504f</p>
-     </div>
-   
-    </div>
-   
-   
-     <div>
-       <div id="twitter_img_box" class="twitter_box">
-         <img id="twitter_img" src="./twitter.png" width="50" height="50" >
-       </div>
-   
-       <div id="twitter_text_box" class='twitter_box'>
-         <p class="text1">@freedomdao</p>
-       </div>
-   
-     </div>
+  
         
 
-    </div>
+    </body>
 </html>
