--- a/whitepaper.html
+++ b/whitepaper.html
@@ -169,6 +169,11 @@
 			</p>
 			
 			<p style="margin-left: 150px;">101 days for Claim, the remaining tokens will not be minted if not claimed!</p>
+			<p style="margin-left: 150px;">
+				<a>Twitter: @the_freedomdao</a>
+				&nbsp;&nbsp;&nbsp;
+				<a>E-mail: admin@thefreedomdao.com</a>
+			</p>
 			</div>
 		
 		
