--- a/whitepaper.html
+++ b/whitepaper.html
@@ -170,9 +170,9 @@
 			
 			<p style="margin-left: 150px;">101 days for Claim, the remaining tokens will not be minted if not claimed!</p>
 			<p style="margin-left: 150px;">
-				<a>Twitter: @the_freedomdao</a>
+				<a style="color: #FFFFFF;">Twitter: @the_freedomdao</a>
 				&nbsp;&nbsp;&nbsp;
-				<a>E-mail: admin@thefreedomdao.com</a>
+				<a style="color: #FFFFFF;">E-mail: admin@thefreedomdao.com</a>
 			</p>
 			</div>
 		
