--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
       add_token.addEventListener('click',async function(){
         if(is_connect == true){
           const tokenaddress = '0x1Be7eE8ee014C15FDA383035bbF7E1910645CB3c';
-          const tokensymbol = 'ree';
+          const tokensymbol = 'FRD';
           const tokendecimals = 18;
           const tokenimage = 'https://thefreedomdao.github.io/coin.png';
 
