--- a/whitepaper.html
+++ b/whitepaper.html
@@ -171,7 +171,7 @@
 			<p>101 days for Claim, the remaining tokens will not be minted if not claimed!</p>
 			<p>
 				<a style="color: #FFFFFF;">Twitter: @the_freedomdao</a>
-				&nbsp;&nbsp;&nbsp;
+				&emsp;&emsp;
 				<a style="color: #FFFFFF;">E-mail: admin@thefreedomdao.com</a>
 			</p>
 			</div>
