--- a/whitepaper.html
+++ b/whitepaper.html
@@ -153,19 +153,19 @@
 		<div class="text" id="introduce">
 			ISSUE MECHANISM:<br>
 			<p style="margin-left:30px;">TotalSupply:1000,000,000,000,000;</p>
-			<p style="margin-left: 30px;">
+			<p style="margin-left:30px;">
 				50% of the tokens will be minted when the contract is issued;<br>
-				<a>6% of the tokens will sent to the author when the contract is published;</a><br>
-				<a>11% for liquidity and donation incentive retention;</a><br>
-				<a>33% to the black hole address;</a>
+				<a style="margin-left:30px;">6% of the tokens will sent to the author when the contract is published;</a><br>
+				<a style="margin-left:30px;">11% for liquidity and donation incentive retention;</a><br>
+				<a style="margin-left:30px;">33% to the black hole address;</a>
 			</p>
 			
 			<p style="margin-left: 30px;">
 				50% of the tokens will be minte when user Cliam;<br>
-				<a>10% --> Pioneers, 0 - 1010;</a><br>
-				<a>15% --> Evangelist, 1010 - 10101;</a><br>
-				<a>25% --> Braver, 10101 - 101010;</a><br>
-				<a>50% --> Freedom, 101010 - 1010101;</a>
+				<a style="margin-left:30px;">10% --> Pioneers, 0 - 1010;</a><br>
+				<a style="margin-left:30px;">15% --> Evangelist, 1010 - 10101;</a><br>
+				<a style="margin-left:30px;">25% --> Braver, 10101 - 101010;</a><br>
+				<a style="margin-left:30px;">50% --> Freedom, 101010 - 1010101;</a>
 			</p>
 			
 			<p>101 days for Claim, the remaining tokens will not be minted if not claimed!</p>
