--- a/whitepaper.html
+++ b/whitepaper.html
@@ -161,7 +161,7 @@
 			</p>
 			
 			<p style="margin-left: 30px;">
-				50% of the tokens will be minte when user Cliam;<br>
+				50% of the tokens will be minted when user Claim;<br>
 				<a style="margin-left:30px;">10% --> Pioneers, 0 - 1010;</a><br>
 				<a style="margin-left:30px;">15% --> Evangelist, 1010 - 10101;</a><br>
 				<a style="margin-left:30px;">25% --> Braver, 10101 - 101010;</a><br>
