--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 		
 		<!-- //release_time  11 days, 11 hours, 11 minutes, 11 seconds-->
 		<div style="color: red;font-size: 20px;">
-		 Countdown：
+		 Online Time：
 		 <span class="JS-tian"></span>
 		 <i>Days</i>
 		 <span class="JS-shi"></span>
