--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 	  
 	</div>
 
-    <div id="claim_box" style="margin-bottom: 80px;background: cyan;padding: 0.625rem;border-radius: 0.625rem;opacity:0.8;">
+    <div id="claim_box" style="margin-bottom: 120px;background: #ffffff;padding: 0.625rem;border-radius: 0.625rem;opacity:0.8;">
 		
 		
 		<!-- //release_time  11 days, 11 hours, 11 minutes, 11 seconds-->
